CppTools: Do not pre-select "external" files in "rename symbol" widget

It's unlikely that the user wants to change files that are not part of
the currently loaded projects, so opt-in is the right approach for
those.

Fixes: QTCREATORBUG-8561
Change-Id: I1812a3e64de66828ac07dea7bbb63acdb4dd40d8
Reviewed-by: Christian Stenger <christian.stenger@qt.io>
Reviewed-by: Eike Ziller <eike.ziller@qt.io>